# VoDS

./: README.md
VodsLab/cppProject/: CMakeLists.txt  buildall.sh  mingw-w64-toolchain.cmake  readme.md  readme.txt
VodsLab/cppProject/build-linux/: CMakeCache.txt  Makefile  checker  cmake_install.cmake  xor2_nand_copy.net
VodsLab/cppProject/build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
VodsLab/cppProject/build-msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  NetlistChecker.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  checker.vcxproj  checker.vcxproj.filters  cmake_install.cmake
VodsLab/cppProject/build-msvc/checker.dir/Debug/: checker.exe.recipe  checker.ilk
VodsLab/cppProject/build-msvc/checker.dir/Debug/checker.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  checker.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
VodsLab/cppProject/build-msvc/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
VodsLab/cppProject/build-msvc/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
VodsLab/cppProject/build-msvc/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
VodsLab/cppProject/build-msvc/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
VodsLab/cppProject/src/: main.cpp
VodsLab/netlists/: xor2.net  xor2_nand_wrong.net
